HW1/javali_tests/HW1/SimpleTest.javali.err
Debug information for file: javali_tests/HW1/SimpleTest.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: a, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: a)
| | | | IntConst (value: 10)
| | | BuiltInWrite ()
| | | | Var (name: a)

Phase exec failed because we expected to see:
10
But we actually saw:
Error: 139

The difference is:
At line   1 /   1:
< 10
> Error: 139

